# ration

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: channel_client.rs  channel_server.rs  helloworld_client.rs  helloworld_server.rs  singleton.rs
ration-allocator/: Cargo.toml
ration-allocator/src/: lib.rs
src/: array.rs  block.rs  channel.rs  lib.rs  map.rs
src/map/: unix.rs
