[package]
name = "ration"
version = "0.2.1"
authors = ["Matthew Norman"]
edition = "2021"
description = "A shared memory library"
readme = "README.md"
homepage = "https://github.com/rtthw/ration"
repository = "https://github.com/rtthw/ration"
license = "MIT"
keywords = ["shm", "ipc", "memory", "mmap", "io"]


[[example]]
name = "helloworld_server"

[[example]]
name = "helloworld_client"

[[example]]
name = "channel_server"

[[example]]
name = "channel_client"

[[example]]
name = "singleton"


[dependencies]
shared_memory = "0.12"

[dev-dependencies]
arrayvec = "0.7"
